--- a/src/components/header.html
+++ b/src/components/header.html
@@ -8,10 +8,16 @@
 </div>
 
 <p>This example demonstrate how to use <a class="font-bold underline" target="_blank" href="https://github.com/alpinejs/alpine/">Alpine.js</a> with
-    <a class="font-bold underline" target="_blank" href="https://parceljs.org/">Parcel</a> and <a target="_blank" class="font-bold underline" href="https://tailwindcss.com">Tailwind.css</a></p>
+    <a class="font-bold underline" target="_blank" href="https://parceljs.org/">Parcel</a> and <a target="_blank" class="font-bold underline"
+        href="https://tailwindcss.com">Tailwind.css</a></p>
 
-<p class="w-2/3 mt-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, pariatur eaque porro id delectus provident exercitationem sed sint
-    labore? Quae laudantium consequatur nihil doloribus suscipit, voluptatum omnis dolorum ullam deleniti.</p>
+<p class="w-2/3 mt-4">
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>
+    Rerum, pariatur eaque porro id delectus provident exercitationem sed sint labore ? Quae laudantium consequatur nihil doloribus suscipit,
+    voluptatum omnis dolorum ullam deleniti.
+</p>
+
+<wc-marquee party>This will demonstrate the resplendent joy of HTML in its prime</wc-marquee>
 
 <style>
     h1 i {
