--- a/src/components/alpine-toggle.html
+++ b/src/components/alpine-toggle.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col my-4 pt-4 border-t-2 w-1/2">
+<div class="flex flex-col">
 
     <h2>Example : playing with Alpine data-binding</h2>
 
