--- a/src/components/alpine-fetch.html
+++ b/src/components/alpine-fetch.html
@@ -1,6 +1,4 @@
-
-
-<div class="flex flex-col mt-4 pt-4 border-t-2 w-1/2">
+<div class="flex flex-col">
     <h2>Example : using fetch & async data with Alpine</h2>
 
     <div class="mt-4" x-data="inputState()">
