--- a/src/components/web-component-banner.html
+++ b/src/components/web-component-banner.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col mt-4 pt-4 border-t-2 w-1/2">
+<div class="flex flex-col">
 
     <h2>Example : using a web component</h2>
 
