use tailwind built-in css purge

--- a/src/components/alpine-fetch.html
+++ b/src/components/alpine-fetch.html
@@ -1,28 +1,27 @@
 <div class="flex flex-col">
-    <h2>Example : using fetch & async data with Alpine</h2>
+  <h2>Example : using fetch & async data with Alpine</h2>
 
-    <div class="mt-4" x-data="inputState()">
-        <button @click="onClick()">Fetch a todo list</button>
-        <ul class="list-disc mt-4 ml-6">
-            <template x-for="todo in todos" :key="todo">
-                <li x-text="todo.title"></li>
-            </template>
-        </ul>
-    </div>
+  <div class="mt-4" x-data="inputState()">
+    <button @click="onClick">Fetch a todo list</button>
+    <ul class="list-disc mt-4 ml-6">
+      <template x-for="todo in todos" :key="todo">
+        <li x-text="todo.title"></li>
+      </template>
+    </ul>
+  </div>
 </div>
 
 <script>
-    function inputState () {
-      return {
-        todos: [],
-        onClick () {
-          fetch('https://jsonplaceholder.typicode.com/users/1/todos')
-            .then(response => response.json())
-            .then(todos => {
-              todos.splice(5)
-              this.todos = todos
-            })
-        },
-      }
-    }
+  // need to set it in window, see https://github.com/alpinejs/alpine#x-data
+  window.inputState = () => ({
+    todos: [],
+    onClick () {
+      fetch('https://jsonplaceholder.typicode.com/users/1/todos')
+        .then(response => response.json())
+        .then(todos => {
+          todos.splice(5)
+          this.todos = todos
+        })
+    },
+  })
 </script>
